--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 ##########################################
 # 站点配置
 
-baseURL = "https://example.com/"
+baseURL = "https://blog-of-rr-from-nowhere.netlify.app/"
 title = "RR的Lost Land"
 languageCode = "zh-CN"
 hasCJKLanguage = true
